<package>
  <name>rviz_gui</name>
  <version>0.11.0</version>
  <description>
     Tutorial showing how to compile your own C++ program with RViz displays and features.
  </description>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rviz_common</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rclcpp</run_depend>
  <run_depend>rviz_common</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>